# LC76G_Pico

./: BUTTON_CONTROL_GUIDE.md  CMakeLists.txt  DASHBOARD_FEATURES.md  GPS_I2C_MIGRATION_GUIDE.md  GPS_RAW_DATA_LOGGER_使用说明.md  GPS_SD_LOGGER_DEVELOPMENT_PLAN.md  ILI9488_MIGRATION_SUMMARY.md  LC76G_I2C_DASHBOARD_IMPLEMENTATION.md  LICENSE  README.md  README.zh.md  build_pico.bat  copy_ili9488_driver.bat  dashboard_layout_visual.txt  dashboard_ui_design.md  pin_config_comparison.md  ui_layout_analysis.md
config/: gps_logger_config.json  ili9488_config.json
demo/C/: Readme.txt  build.sh
demo/C/inc/Command/: ql_cmd_decode.h  ql_cmd_encode.h
demo/C/inc/I2C/: i2c_adapt.h  i2c_log.h  i2c_read.h  i2c_register.h  i2c_utils.h  i2c_write.h
demo/C/src/: main.c
demo/C/src/Command/: ql_cmd_decode.c  ql_cmd_encode.c
demo/C/src/I2C/: i2c_adapt.c  i2c_log.c  i2c_read.c  i2c_utils.c  i2c_write.c
docs/: Home.md  api-reference.md  basic-usage.md  build-guide.md  contributing.md  coordinate-systems.md  development-setup.md  display-module.md  firmware-upload.md  gps-module.md  hardware-connection.md  index.md  quick-start.md  system-architecture.md  troubleshooting.md
examples/: gps_sd_logger_demo.cpp  vendor_gps_dashboard.cpp  vendor_gps_display.c  vendor_gps_example.c  vendor_gps_ili9488.cpp  vendor_gps_ili9488_optimized.cpp
include/: pin_config.hpp
include/display/: display_driver.hpp  display_manager.hpp
include/display/adapters/: ili9488_adapter.hpp
include/display/ili9488/: flash_font_cache.hpp  hybrid_font_renderer.inl  hybrid_font_system.hpp  ili9488_driver.hpp  ili9488_hal_simple.hpp  pico_ili9488_gfx.hpp  pico_ili9488_gfx.inl  unicode_ranges.h
include/gps/: gps_logger.hpp  lc76g_i2c_adaptor.h  simple_sd_writer.hpp  vendor_gps_parser.h
src/display/: display_manager.cpp  st7789.c  st7789_font.c  st7789_gfx.c  st7789_hal.c
src/display/adapters/: ili9488_adapter.cpp
src/display/ili9488/: flash_font_cache.cpp  hybrid_font_system.cpp  ili9488_driver.cpp  ili9488_hal.cpp
src/display/ili9488/hal/: ili9488_hal_simple.cpp
src/display/st7789/: st7789.c  st7789_font.c  st7789_gfx.c  st7789_hal.c
src/gps/: gps_logger.cpp  lc76g_i2c_adaptor.c  simple_sd_writer.cpp  vendor_gps_parser.c  vendor_gps_parser.h
